2008-12-31  Sergii Stoian <stoyan255@gmail.com>
	
	* Framework/PCFileNameIcon.m:
	* Headers/ProjectCenter/PCFileNameIcon.h:
	  Implementation of dragging functionality.

	* Framework/PCProjectBrowser.m: Implement file icon delegate methods.
	  Dragging files to category icon adds files to project.

2008-12-30 Richard frith-Macdonald <rfm"gnu.org>

	* PCMenuController.m:
	* Framework/PCProjectManager.m:
	* Framework/PCBundleManager.m:
	* Framework/PCMakefileFactory.m:
	* Framework/PCProject.m:
	* Framework/PCProjectLauncherPanel.m:
	* Framework/PCFileManager.m:
	* Framework/PCButton.m:
	* Framework/PCProjectBuilder.m:
	* Framework/PCProjectLoadedFilesPanel.m:
	* Framework/PCFileNameField.m:
	* Framework/PCSplitView.m:
	* Framework/PCProjectLauncher.m:
	* Framework/PCAddFilesPanel.m:
	* Framework/Resources/class.template:
	* Framework/Resources/header.template:
	* Framework/Resources/cfile.template:
	* Framework/PCProjectBuilderPanel.m:
	* Framework/PCFileCreator.m:
	* PCAppController.m:
	* PCFindController.m:
	* ProjectCenter_main.m:
	* Modules/Parsers/ProjectCenter/ObjCMethodHandler.h:
	* Modules/Parsers/ProjectCenter/ObjCCommentHandler.h:
	* Modules/Parsers/ProjectCenter/PCParser.h:
	* Modules/Parsers/ProjectCenter/ObjCClassHandler.h:
	* Modules/Parsers/ProjectCenter/ObjCMethodHandler.m:
	* Modules/Parsers/ProjectCenter/ObjCCommentHandler.m:
	* Modules/Parsers/ProjectCenter/CodeHandler.h:
	* Modules/Debuggers/ProjectCenter/PCDebugger.m:
	* Modules/Debuggers/ProjectCenter/PTYView.m:
	* Modules/Debuggers/ProjectCenter/PCDebuggerView.h:
	* Modules/Debuggers/ProjectCenter/PCDebugger.h:
	* Modules/Debuggers/ProjectCenter/PCDebuggerView.m:
	* Modules/Debuggers/ProjectCenter/PTYView.h:
	* Modules/Projects/Application/PCAppProject.h:
	* Modules/Projects/Application/PCAppProject+Inspector.h:
	* Modules/Projects/Application/PCAppProject.m:
	* Modules/Projects/Application/PCAppProject+Inspector.m:
	* Modules/Projects/Application/Resources/AppController.m: