@@ -30,6 +30,7 @@
   NSFileHandle *master_handle;
   NSFileHandle *slave_handle;
   NSFileHandle *error_handle;
+  int master_fd, slave_fd;
 }
 
 - (int)master;
